Crash in [@ mozilla::gl::ScopedSaveMultiTex::ScopedSaveMultiTex]
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox134 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | + | fixed |
People
(Reporter: dmeehan, Assigned: stransky)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/0de284be-f206-491f-8380-71e560250108
MOZ_CRASH Reason:
MOZ_RELEASE_ASSERT(texUnits >= 1)
Top 10 frames:
0 libxul.so mozilla::gl::ScopedSaveMultiTex::ScopedSaveMultiTex(mozilla::gl::GLContext*, ... gfx/gl/GLBlitHelper.cpp:339
1 libxul.so mozilla::gl::GLBlitHelper::Blit(DMABufSurface*, mozilla::gfx::IntSizeTyped<mo... gfx/gl/GLBlitHelper.cpp:1560
2 libxul.so DMABufSurfaceYUV::ReadIntoBuffer(unsigned char*, int, mozilla::gfx::IntSizeTy... widget/gtk/DMABufSurface.cpp:1768
3 libxul.so DMABufSurfaceYUV::BuildSurfaceDescriptorBuffer(mozilla::layers::SurfaceDescri... widget/gtk/DMABufSurface.cpp:1825
4 libxul.so mozilla::RemoteDecoderManagerParent::RecvReadback(mozilla::layers::SurfaceDes... dom/media/ipc/RemoteDecoderManagerParent.cpp:295
5 libxul.so mozilla::PRemoteDecoderManagerParent::OnMessageReceived(IPC::Message const&, ... ipc/ipdl/PRemoteDecoderManagerParent.cpp:404
6 libxul.so mozilla::ipc::MessageChannel::DispatchSyncMessage(mozilla::ipc::ActorLifecycl... ipc/glue/MessageChannel.cpp:1763
7 libxul.so mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecyclePro... ipc/glue/MessageChannel.cpp:1715
7 libxul.so mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, ... ipc/glue/MessageChannel.cpp:1508
8 libxul.so mozilla::ipc::MessageChannel::MessageTask::Run() ipc/glue/MessageChannel.cpp:1608
Reporter | ||
Comment 1•2 months ago
|
||
:stransky looks like this might have been introduced by Bug 1940037?
Could you take a look?
(Waiting for confirmation before setting the regressor)
Assignee | ||
Comment 2•2 months ago
|
||
Sure, will look at it.
Reporter | ||
Comment 3•2 months ago
|
||
Thanks.
Once you've confirmed, I might ask the sheriffs to back out and trigger a new nightly Linux build.
Assignee | ||
Comment 4•2 months ago
•
|
||
This is not a regression caused by Bug 1940037. The patches there reveals underlying bug when we're blitting already released surface.
Before Bug Bug 1940037 was hard coded but now it return real plane count so it returns 0 for empty surfaces which should not be used.
Correct fix is to ensure we don't process empty surfaces.
Assignee | ||
Comment 5•2 months ago
|
||
DMABufSurfaceYUV::ReadIntoBuffer() needs to be fixed, will look at it.
Assignee | ||
Updated•2 months ago
|
Assignee | ||
Updated•2 months ago
|
Reporter | ||
Comment 6•2 months ago
|
||
Any objection if we back out Bug 1940037 in the meantime?
Assignee | ||
Comment 7•2 months ago
|
||
(In reply to Donal Meehan [:dmeehan] from comment #6)
Any objection if we back out Bug 1940037 in the meantime?
Please keep it there, will look at it ASAP.
Assignee | ||
Comment 8•2 months ago
|
||
Assignee | ||
Updated•2 months ago
|
Reporter | ||
Updated•2 months ago
|
Comment 10•2 months ago
|
||
bugherder |
![]() |
||
Updated•2 months ago
|
Description
•