Bug 1940453 [Linux] Don't read empty DMABuf surfaces r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D233516